// Copyright 2022 PieDb Data
//
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
//
// http://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.

use std::sync::Arc;

use parking_lot::RwLock;
use piestream_common::config::StorageConfig;
use piestream_common::error::Result;
use piestream_common::util::addr::HostAddr;
use piestream_common_service::observer_manager::{Channel, NotificationClient, ObserverManager};
use piestream_hummock_sdk::compaction_group::StaticCompactionGroupId;
use piestream_hummock_sdk::filter_key_extractor::FilterKeyExtractorManager;
use piestream_hummock_sdk::CompactionGroupId;
use piestream_meta::hummock::{HummockManager, HummockManagerRef, MockHummockMetaClient};
use piestream_meta::manager::{MessageStatus, MetaSrvEnv, NotificationManagerRef, WorkerKey};
use piestream_meta::storage::{MemStore, MetaStore};
use piestream_pb::common::WorkerNode;
use piestream_pb::hummock::pin_version_response;
use piestream_pb::meta::subscribe_response::{Info, Operation};
use piestream_pb::meta::{MetaSnapshot, SubscribeResponse, SubscribeType};
use piestream_storage::hummock::compaction_group_client::{
    CompactionGroupClientImpl, DummyCompactionGroupClient,
};
use piestream_storage::hummock::event_handler::{HummockEvent, HummockEventHandler};
use piestream_storage::hummock::iterator::test_utils::mock_sstable_store;
use piestream_storage::hummock::local_version::local_version_manager::{
    LocalVersionManager, LocalVersionManagerRef,
};
use piestream_storage::hummock::local_version::pinned_version::PinnedVersion;
use piestream_storage::hummock::observer_manager::HummockObserverNode;
use piestream_storage::hummock::store::version::HummockReadVersion;
use piestream_storage::hummock::SstableStore;
use tokio::sync::mpsc::{unbounded_channel, UnboundedReceiver, UnboundedSender};

pub struct TestNotificationClient<S: MetaStore> {
    addr: HostAddr,
    notification_manager: NotificationManagerRef<S>,
    hummock_manager: HummockManagerRef<S>,
}

pub struct TestChannel<T>(UnboundedReceiver<std::result::Result<T, MessageStatus>>);

#[async_trait::async_trait]
impl<T: Send + 'static> Channel for TestChannel<T> {
    type Item = T;

    async fn message(&mut self) -> std::result::Result<Option<T>, MessageStatus> {
        match self.0.recv().await {
            None => Ok(None),
            Some(result) => result.map(|r| Some(r)),
        }
    }
}

impl<S: MetaStore> TestNotificationClient<S> {
    pub fn new(
        addr: HostAddr,
        notification_manager: NotificationManagerRef<S>,
        hummock_manager: HummockManagerRef<S>,
    ) -> Self {
        Self {
            addr,
            notification_manager,
            hummock_manager,
        }
    }
}

#[async_trait::async_trait]
impl<S: MetaStore> NotificationClient for TestNotificationClient<S> {
    type Channel = TestChannel<SubscribeResponse>;

    async fn subscribe(&self, subscribe_type: SubscribeType) -> Result<Self::Channel> {
        let (tx, rx) = tokio::sync::mpsc::unbounded_channel();

        let hummock_manager_guard = self.hummock_manager.get_read_guard().await;
        let meta_snapshot = MetaSnapshot {
            hummock_version: Some(hummock_manager_guard.current_version.clone()),
            ..Default::default()
        };
        tx.send(Ok(SubscribeResponse {
            status: None,
            operation: Operation::Snapshot as i32,
            info: Some(Info::Snapshot(meta_snapshot)),
            version: self.notification_manager.current_version().await,
        }))
        .unwrap();
        self.notification_manager
            .insert_sender(subscribe_type, WorkerKey(self.addr.to_protobuf()), tx)
            .await;
        Ok(TestChannel(rx))
    }
}

pub fn get_test_notification_client(
    env: MetaSrvEnv<MemStore>,
    hummock_manager_ref: Arc<HummockManager<MemStore>>,
    worker_node: WorkerNode,
) -> TestNotificationClient<MemStore> {
    TestNotificationClient::new(
        worker_node.get_host().unwrap().into(),
        env.notification_manager_ref(),
        hummock_manager_ref,
    )
}

pub async fn prepare_local_version_manager(
    opt: Arc<StorageConfig>,
    env: MetaSrvEnv<MemStore>,
    hummock_manager_ref: HummockManagerRef<MemStore>,
    worker_node: WorkerNode,
) -> LocalVersionManagerRef {
    let (tx, mut rx) = unbounded_channel();
    let notification_client =
        get_test_notification_client(env, hummock_manager_ref.clone(), worker_node.clone());
    let observer_manager = ObserverManager::new(
        notification_client,
        HummockObserverNode::new(Arc::new(FilterKeyExtractorManager::default()), tx),
    )
    .await;
    let _ = observer_manager.start().await.unwrap();
    let hummock_version = match rx.recv().await {
        Some(HummockEvent::VersionUpdate(pin_version_response::Payload::PinnedVersion(
            version,
        ))) => version,
        _ => unreachable!("should be full version"),
    };

    let (tx, _rx) = unbounded_channel();
    let (event_tx, event_rx) = unbounded_channel();

    let local_version_manager = LocalVersionManager::for_test(
        opt.clone(),
        PinnedVersion::new(hummock_version.hummock_version.unwrap(), tx),
        mock_sstable_store(),
        Arc::new(MockHummockMetaClient::new(
            hummock_manager_ref.clone(),
            worker_node.id,
        )),
        event_tx,
        Arc::new(CompactionGroupClientImpl::Dummy(
            DummyCompactionGroupClient::new(
                StaticCompactionGroupId::StateDefault as CompactionGroupId,
            ),
        )),
    );

    tokio::spawn(
        HummockEventHandler::new(
            local_version_manager.clone(),
            event_rx,
            Arc::new(RwLock::new(HummockReadVersion::new(
                local_version_manager.get_pinned_version(),
            ))),
        )
        .start_hummock_event_handler_worker(),
    );

    local_version_manager
}

pub async fn prepare_local_version_manager_new(
    opt: Arc<StorageConfig>,
    env: MetaSrvEnv<MemStore>,
    hummock_manager_ref: HummockManagerRef<MemStore>,
    worker_node: WorkerNode,
    sstable_store_ref: Arc<SstableStore>,
) -> (
    LocalVersionManagerRef,
    UnboundedSender<HummockEvent>,
    UnboundedReceiver<HummockEvent>,
) {
    let (event_tx, mut event_rx) = unbounded_channel();

    let notification_client =
        get_test_notification_client(env, hummock_manager_ref.clone(), worker_node.clone());
    let observer_manager = ObserverManager::new(
        notification_client,
        HummockObserverNode::new(
            Arc::new(FilterKeyExtractorManager::default()),
            event_tx.clone(),
        ),
    )
    .await;
    let _ = observer_manager.start().await.unwrap();
    let hummock_version = match event_rx.recv().await {
        Some(HummockEvent::VersionUpdate(pin_version_response::Payload::PinnedVersion(
            version,
        ))) => version,
        _ => unreachable!("should be full version"),
    };

    let (tx, _rx) = unbounded_channel();

    let local_version_manager = LocalVersionManager::for_test(
        opt.clone(),
        PinnedVersion::new(hummock_version.hummock_version.unwrap(), tx),
        sstable_store_ref,
        Arc::new(MockHummockMetaClient::new(
            hummock_manager_ref.clone(),
            worker_node.id,
        )),
        event_tx.clone(),
        Arc::new(CompactionGroupClientImpl::Dummy(
            DummyCompactionGroupClient::new(
                StaticCompactionGroupId::StateDefault as CompactionGroupId,
            ),
        )),
    );

    (local_version_manager, event_tx, event_rx)
}
